update idk what is this ...

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body>
     <!-- header section -->
-    <header class="header-section">
+    <!-- <header class="header-section">
         <div class="header-container container">
             <nav class="nav-container">
                 <a class="header-logo link" href="index.html">Web<span class="header-second-logo">Studio</span></a>
@@ -44,16 +44,16 @@
 
             </address>
         </div>
-    </header>
+    </header> -->
     <!-- main section -->
     <main>
         <!-- hero section -->
-        <section class="hero-section">
+        <!-- <section class="hero-section">
             <div class="container">
                 <h1 class="hero-header">Effective Solutions for Your Business</h1>
                 <button class="bttn-hero" type="button" data-modal-open>Order Service</button>
             </div>
-        </section>
+        </section> -->
         <!-- features -->
         <section class="features-section">
             <div class="container">
@@ -113,7 +113,7 @@
             </div>
         </section>
         <!-- what are we doing -->
-        <section class="doing-section">
+        <!-- <section class="doing-section">
             <div class="container">
                 <h2 class="page-header">What are we doing</h2>
                 <ul class="doing-container list">
@@ -128,9 +128,9 @@
                     </li>
                 </ul>
             </div>
-        </section>
+        </section> -->
         <!-- our team -->
-        <section class="team-section">
+        <!-- <section class="team-section">
             <div class="container">
                 <h2 class="team-header">Our Team</h2>
                 <ul class="team-container list">
@@ -294,9 +294,9 @@
                     </li>
                 </ul>
             </div>
-        </section>
+        </section> -->
         <!-- Customers -->
-        <section class="section-customers">
+        <!-- <section class="section-customers">
             <div class="container">
                 <h2 class="customers-header">Customers</h2>
                 <ul class="customers-list">
@@ -344,11 +344,11 @@
                     </li>
                 </ul>
             </div>
-        </section>
+        </section> -->
 
     </main>
     <!-- footer section -->
-    <footer class="footer-options">
+    <!-- <footer class="footer-options">
         <div class="footer-section container">
             <div class="footer-items">
                 <a class="footer-logo link" href="./index.html">Web<span class="logo-item">Studio</span></a>
@@ -407,7 +407,7 @@
             </div>
         </div>
 
-    </footer>
+    </footer> -->
     <!-- Modal window -->
     <div class="backdrop is-hidden" data-modal>
         <div class="modal">
