--- a/index.html
+++ b/index.html
@@ -20,11 +20,6 @@
         <div class="header-container container">
             <nav class="nav-container">
                 <a class="header-logo link" href="index.html">Web<span class="header-second-logo">Studio</span></a>
-                <button class="menu-toggle js-open-menu" aria-expanded="false" aria-controls="mobile-menu">
-                    <svg class="menu-toggle-icon" width="32" height="22">
-                        <use href="./images/icons.svg#menu-icon"></use>
-                    </svg>
-                </button>
                 <ul class="menu-container list">
                     <li class="header-studio">
                         <a class="active header-bar link" href="./index.html">Studio</a>
@@ -46,8 +41,26 @@
                         <a class="link header-address-list" href="tel:+110001111111">+11 (000) 111-11-11</a>
                     </li>
                 </ul>
-
             </address>
+            <button class="menu-toggle js-open-menu" aria-expanded="false" aria-controls="mobile-menu">
+                <svg class="menu-toggle-icon" width="32" height="22">
+                    <use href="./images/icons.svg#menu-icon"></use>
+                </svg>
+            </button>
+        </div>
+        <div class="menu-mobile-container js-menu-container" id="mobile-menu">
+            <button class="menu-mobile-close-btn js-close-menu">
+                <svg class="modal-icon" width="24" height="24">
+                    <use href="./images/icons.svg#close-black-18dp"></use>
+                </svg>
+            </button>
+
+            <ul class="mobile-menu">
+                <li class="mobile-menu-item"><a href="./index.html" class="mobile-menu-link link">Studio</a>
+                </li>
+                <li class="mobile-menu-item"><a href="./portfolio.html" class="mobile-menu-link link">Portfolio</a></li>
+                <li class="mobile-menu-item"><a href="" class="mobile-menu-link link">Contacts</a></li>
+            </ul>
         </div>
     </header>
     <!-- main section -->
@@ -482,22 +495,7 @@
         </div>
     </div>
     <!-- MOBILE MENU -->
-    <div class="menu-mobile-container js-menu-container" id="mobile-menu">
-        <button class="menu-toggle js-close-menu">
-            <svg fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg" width="24" height="24">
-                <path fill-rule="evenodd"
-                    d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z"
-                    clip-rule="evenodd"></path>
-            </svg>
-        </button>
 
-        <ul class="mobile-menu">
-            <li><a href="" class="link">About</a></li>
-            <li><a href="" class="link">Products</a></li>
-            <li><a href="" class="link">Contacts</a></li>
-            <li><a href="" class="link">Career</a></li>
-        </ul>
-    </div>
 
     <!-- Script js  -->
     <script defer src="https://cdnjs.cloudflare.com/ajax/libs/body-scroll-lock/3.1.5/bodyScrollLock.min.js"
