--- a/index.html
+++ b/index.html
@@ -61,6 +61,17 @@
                 <li class="mobile-menu-item"><a href="./portfolio.html" class="mobile-menu-link link">Portfolio</a></li>
                 <li class="mobile-menu-item"><a href="" class="mobile-menu-link link">Contacts</a></li>
             </ul>
+            <address class="mobile-menu-address">
+                <ul class="mobile-address-list list">
+                    <li>
+                        <a class="mobile-menu-tel" href="tel:+110001111111">+11 (000) 111-11-11</a>
+                    </li>
+                    <li>
+
+                        <a class="mobile-menu-email" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                    </li>
+                </ul>
+            </address>
         </div>
     </header>
     <!-- main section -->
