--- a/index.html
+++ b/index.html
@@ -63,15 +63,45 @@
             </ul>
             <address class="mobile-menu-address">
                 <ul class="mobile-address-list list">
-                    <li>
-                        <a class="mobile-menu-tel" href="tel:+110001111111">+11 (000) 111-11-11</a>
+                    <li class="mobile-address-item">
+                        <a class="mobile-menu-tel link" href="tel:+110001111111">+11 (000) 111-11-11</a>
                     </li>
-                    <li>
+                    <li class="mobile-address-item">
 
-                        <a class="mobile-menu-email" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                        <a class="mobile-menu-email link" href="mailto:info@devstudio.com">info@devstudio.com</a>
                     </li>
                 </ul>
             </address>
+            <ul class="mobile-socials-list list">
+                <li class="socials-list-item">
+                    <a class="footer-social-links" href="">
+                        <svg class="footer-social-icon" width="24" height="24">
+                            <use href="./images/icons.svg#instagram"></use>
+                        </svg>
+                    </a>
+                </li>
+                <li class="socials-list-item">
+                    <a class="footer-social-links" href="">
+                        <svg class="footer-social-icon" width="24" height="24">
+                            <use href="./images/icons.svg#twitter"></use>
+                        </svg>
+                    </a>
+                </li>
+                <li class="socials-list-item">
+                    <a class="footer-social-links" href="">
+                        <svg class="footer-social-icon" width="24" height="24">
+                            <use href="./images/icons.svg#facebook"></use>
+                        </svg>
+                    </a>
+                </li>
+                <li class="socials-list-item">
+                    <a class="footer-social-links" href="">
+                        <svg class="footer-social-icon" width="24" height="24">
+                            <use href="./images/icons.svg#linkedin"></use>
+                        </svg>
+                    </a>
+                </li>
+            </ul>
         </div>
     </header>
     <!-- main section -->
