update for retina + hero section

--- a/index.html
+++ b/index.html
@@ -107,12 +107,12 @@
     <!-- main section -->
     <main>
         <!-- hero section -->
-        <!-- <section class="hero-section">
+        <section class="hero-section">
             <div class="container">
                 <h1 class="hero-header">Effective Solutions for Your Business</h1>
                 <button class="bttn-hero" type="button" data-modal-open>Order Service</button>
             </div>
-        </section> -->
+        </section>
         <!-- features -->
         <section class="features-section">
             <div class="container">
