update our team done

--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
             </div>
         </section> -->
         <!-- our team -->
-        <!-- <section class="team-section">
+        <section class="team-section">
             <div class="container">
                 <h2 class="team-header">Our Team</h2>
                 <ul class="team-container list">
@@ -353,7 +353,7 @@
                     </li>
                 </ul>
             </div>
-        </section> -->
+        </section>
         <!-- Customers -->
         <!-- <section class="section-customers">
             <div class="container">
