update for footer mobile+tab

--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
             </div>
         </section>
         <!-- what are we doing -->
-        <!-- <section class="doing-section">
+        <section class="doing-section">
             <div class="container">
                 <h2 class="page-header">What are we doing</h2>
                 <ul class="doing-container list">
@@ -187,7 +187,7 @@
                     </li>
                 </ul>
             </div>
-        </section> -->
+        </section>
         <!-- our team -->
         <section class="team-section">
             <div class="container">
@@ -355,8 +355,8 @@
             </div>
         </section>
         <!-- Customers -->
-        <!-- <section class="section-customers">
-            <div class="container">
+        <section class="section-customers">
+            <div class="customers-container container">
                 <h2 class="customers-header">Customers</h2>
                 <ul class="customers-list">
                     <li class="customers-item list">
@@ -403,11 +403,11 @@
                     </li>
                 </ul>
             </div>
-        </section> -->
+        </section>
 
     </main>
     <!-- footer section -->
-    <!-- <footer class="footer-options">
+    <footer class="footer-options">
         <div class="footer-section container">
             <div class="footer-items">
                 <a class="footer-logo link" href="./index.html">Web<span class="logo-item">Studio</span></a>
@@ -466,7 +466,7 @@
             </div>
         </div>
 
-    </footer> -->
+    </footer>
     <!-- Modal window -->
     <div class="backdrop is-hidden" data-modal>
         <div class="modal">
